Fixed an issue where the input field was too big.

--- a/src/pages/components/LevelBar/LevelBar.css
+++ b/src/pages/components/LevelBar/LevelBar.css
@@ -36,3 +36,7 @@
     1px 1px 0 #000;
   color: white;
 }
+
+.skill-name-change-input {
+  field-sizing: content;
+}
